moved datamodel.prisma and generated to server file, updaed the prisma.yml and created server/index.js for our GraphQL server

--- a/prisma.yml
+++ b/prisma.yml
@@ -1,8 +1,9 @@
 endpoint: https://us1.prisma.sh/tick-toc/tick-toc/dev
-datamodel: datamodel.prisma
+datamodel: ./server/datamodel.prisma
+# set up a local endpoint and datamodel
 
 generate:
   - generator: javascript-client
-    output: ./generated/prisma-client/
+    output: ./server/generated/prisma-client/
   - generator: graphql-schema
-    output: ./generated/graphql-prisma
+    output: ./server/generated/graphql-prisma
