--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-apollo": "^2.4.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "three": "^0.100.0",
+    "three-gltf-loader": "^1.100.0"
   },
   "scripts": {
     "start": "react-scripts start",
