--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "graphql-import": "^0.7.1",
     "graphql-yoga": "^1.17.0",
     "i": "^0.3.6",
+    "jsdom": "^13.2.0",
     "prisma": "^1.25.3",
     "prisma-client-lib": "^1.25.1",
     "react": "^16.7.0",
