--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "dependencies": {
     "apollo-boost": "^0.1.27",
     "apollo-link-context": "^1.0.12",
+    "canvas": "^2.3.1",
     "gql": "^1.1.2",
     "graphql": "^14.1.1",
     "graphql-import": "^0.7.1",
     "graphql-yoga": "^1.17.0",
     "i": "^0.3.6",
+    "jsdom": "^13.2.0",
+    "karma": "^4.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.2",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
     "prisma": "^1.25.1",
     "prisma-client-lib": "^1.25.1",
     "react": "^16.7.0",
