--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "three": "^0.100.0",
-    "three-gltf-loader": "^1.100.0"
+    "three-gltf-loader": "^1.100.0",
+    "three-obj-loader": "^1.1.3",
+    "three-obj-mtl-loader": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
