--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "sequelize": "^4.42.0",
     "three": "^0.100.0",
     "three-gltf-loader": "^1.100.0",
     "three-obj-loader": "^1.1.3",
@@ -29,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "seed": "node script/seed.js"
   },
   "eslintConfig": {
     "extends": "react-app"
