--- a/package.json
+++ b/package.json
@@ -3,23 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.1.27",
-    "apollo-link-context": "^1.0.12",
+    "axios": "^0.18.0",
     "canvas": "^2.3.1",
-    "gql": "^1.1.2",
-    "graphql": "^14.1.1",
-    "graphql-import": "^0.7.1",
-    "graphql-yoga": "^1.17.0",
     "i": "^0.3.6",
     "jest-canvas-mock": "^1.1.1-beta.1",
     "jsdom": "^13.2.0",
-    "prisma": "^1.25.3",
-    "prisma-client-lib": "^1.25.1",
     "react": "^16.7.0",
-    "react-apollo": "^2.4.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "sequelize": "^4.42.0",
     "three": "^0.100.0",
     "three-gltf-loader": "^1.100.0",
