saving changes before a master pull

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "canvas": "^2.3.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
