--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,17 @@
 
 # dependencies
 /node_modules
+/client/node_modules
 /.pnp
 .pnp.js
 prisma.yml
 
 # testing
 /coverage
+/client/coverage
 
 # production
-/build
+/client/build
 
 # misc
 .DS_Store
