--- a/package.json
+++ b/package.json
@@ -1,44 +1,34 @@
 {
   "name": "tick-toc",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-server": "node server/index.js",
+    "start-client": "cd client && npm start",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tick-toc/tick-toc.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tick-toc/tick-toc/issues"
+  },
+  "homepage": "https://github.com/tick-toc/tick-toc#readme",
   "dependencies": {
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "canvas": "^2.3.1",
+    "compression": "^1.7.3",
+    "connect-session-sequelize": "^6.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "i": "^0.3.6",
-    "jest-canvas-mock": "^1.1.1-beta.1",
-    "jsdom": "^13.2.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.7",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "pg": "^7.8.0",
     "sequelize": "^4.42.0",
-    "three": "^0.100.0",
-    "three-gltf-loader": "^1.100.0",
-    "three-obj-loader": "^1.1.3",
-    "three-obj-mtl-loader": "^1.0.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "seed": "node script/seed.js"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "socket.io": "^2.2.0"
+  }
 }
